--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.6.5",
     "@headlessui/react": "^1.6.3",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
@@ -11,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@urql/exchange-graphcache": "^4.4.1",
     "eslint-config-prettier": "^8.5.0",
     "graphql": "^16.5.0",
     "prettier": "^2.6.0",
@@ -18,6 +18,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "urql": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
